# ChangeLog for net-wireless/python-wifi
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/python-wifi/ChangeLog,v 1.14 2012/12/16 15:25:55 armin76 Exp $

  16 Dec 2012; Raúl Porcel <armin76@gentoo.org> python-wifi-0.5.0-r1.ebuild:
  alpha/ia64/sparc stable wrt #442038

  21 Nov 2012; Agostino Sarubbo <ago@gentoo.org> python-wifi-0.5.0-r1.ebuild:
  Stable for x86, wrt bug #442038

  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> python-wifi-0.5.0-r1.ebuild:
  Stable for HPPA (bug #442038).

  07 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
  python-wifi-0.5.0-r1.ebuild:
  stable ppc ppc64, bug #442038

  06 Nov 2012; Agostino Sarubbo <ago@gentoo.org> python-wifi-0.5.0-r1.ebuild:
  Stable for amd64, wrt bug #442038

  25 Feb 2012; Patrick Lauer <patrick@gentoo.org> python-wifi-0.3.1-r1.ebuild,
  python-wifi-0.5.0-r1.ebuild:
  Restricting jython

  26 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  python-wifi-0.5.0-r1.ebuild:
  Marked ~ppc wrt #357619

  09 Jul 2011; Matt Turner <mattst88@gentoo.org> python-wifi-0.5.0-r1.ebuild:
  Added ~mips, bug 357619

  29 Apr 2011; Samuli Suominen <ssuominen@gentoo.org>
  python-wifi-0.5.0-r1.ebuild:
  Keyword ~ppc64 wrt #357619

  16 Apr 2011; Raúl Porcel <armin76@gentoo.org> python-wifi-0.5.0-r1.ebuild:
  Add ~ia64/~sparc wrt #357619

  30 Mar 2011; Jeroen Roovers <jer@gentoo.org> python-wifi-0.5.0-r1.ebuild:
  Marked ~hppa (bug #357619).

  27 Mar 2011; Tobias Klausmann <klausman@gentoo.org>
  python-wifi-0.5.0-r1.ebuild:
  Keyworded on alpha, bug #357619

*python-wifi-0.5.0-r1 (09 Mar 2011)
*python-wifi-0.3.1-r1 (09 Mar 2011)

  09 Mar 2011; Justin Lecher <jlec@gentoo.org> -python-wifi-0.3.1.ebuild,
  +python-wifi-0.3.1-r1.ebuild, -python-wifi-0.5.0.ebuild,
  +python-wifi-0.5.0-r1.ebuild:
  Install files in appropriate location, thanks Arfrever pointing this out

*python-wifi-0.5.0 (06 Mar 2011)
*python-wifi-0.3.1 (06 Mar 2011)
