@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare
-DEPEND=dev-python/setuptools =dev-lang/python-2*
-DESCRIPTION=Provides r/w access to a wireless network card's capabilities using the Linux Wireless Extensions
-EAPI=3
-HOMEPAGE=http://pypi.python.org/pypi/python-wifi
-IUSE=examples
-KEYWORDS=~amd64 ~x86
-LICENSE=LGPL-2.1 examples? ( GPL-2 )
-RDEPEND==dev-lang/python-2*
-SLOT=0
-SRC_URI=mirror://pypi/packages/source/p/python-wifi/python-wifi-0.3.1.tar.gz mirror://berlios/pythonwifi/python-wifi-0.3.1.tar.gz
-_eclasses_=distutils	92e738ea29389cb3f34778d7a349ac71	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	cd022f89fef846d083fc994b9e3d8c04	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=ba7e02f355c032a5db10358002a586c3
