@@ -1,16 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST python-wifi-0.3.1.tar.gz 32036 SHA256 a7087ac16ce2d1f146dd76cbfc442ae5b91774f4b8c8eba913c09d0c325eb12f
 DIST python-wifi-0.5.0.tar.bz2 69113 SHA256 3e3f645d37ab20450f60c785cec5f21b330f28a6c46c7c1b0898305dd7a34b26 SHA512 cbbb337b20f60bb28597dc6e3c90b8d20ddee9512cf000ca0107eb01d2bfde1b3047458d1a3f4dc4b9836ae283cbc24792ffb95c4747027896cd6e50a72151d8 WHIRLPOOL d31688208976d8b5e3ea44211fc9e752238723d86aeb3aae5e28ba2e977881cd2bd6be8267dcd1507ee0681fba3aa65d6dfdc8cb84226aef391461e225a37406
-EBUILD python-wifi-0.3.1-r1.ebuild 959 SHA256 f2646327aee3bdbc75d66f1a0a4ac19cd16a43ad50fec135ce5572c6cafba797 SHA512 aa40569b5b8abc8828cea71dd6d130ba99e333e8550502378fd40d83a854ec8fa694babfbd096466e8a8ef0be9cda552dc7b51d90fff75b9e27b50cd2ccc1b5c WHIRLPOOL 770dfaa4465ab9fb3adfc7bfb7f93b53149e88859385fde7b25f519ea85c325344669e5dcb41790e8cd822c377e4f12603684eae74063e0bbc9927c0b0f549df
 EBUILD python-wifi-0.5.0-r1.ebuild 1091 SHA256 f35af1aac03c311b1b4bddfced4a6a088abb6500aded2b5e7dfd5ee8ca3b8107 SHA512 2e6a73a667d567a6b157c718f339771280ed1b4a7e2c029437a6b065b23b6524f07edcbf33422078dac9d6404dcc57542a1786885cb1cedadb34426ed9ae165b WHIRLPOOL 4fb9e875717d0dc4dce47de8adcb7eafa3a597230cae63280b3de95eba74e76f83ef351df5d6082e759c2d4be73daa82f6adc909ce0dc5db61d50a96adb3a376
-MISC ChangeLog 2136 SHA256 19f7d7dc6eb0b9b60b4d3f368cd4fa31cd624333eff23bc6626d0c313474079d SHA512 caabb9be30fa1c410b8994c1df41b064e9c90e27b2cf6c8de0ba0bdd22fe4dacf45f22915d33fd463f98648e6cd823adaae1769151c9531456296df9ac4e3330 WHIRLPOOL deaa26d3bcd0b0a103fa12f1ee6c65eee446180d215e2f9869b00c966e55d1e4c8cefdc1fd6d1133772f1c38e74c9547c1140524d508b552112ae2a33ed276e1
+EBUILD python-wifi-0.5.0-r2.ebuild 1382 SHA256 90d831861c28cc31e81bb59d61b7849d66a87ba413c8e3934d87a5d0947d0eb1 SHA512 b94ba6834ef13c13475e4bfd30250ec3722e8dbf92aab14c677a4134d449c72384da8015c9bb27a9cd69eaa1b4510c960680d7236729adebabf2db24061622c3 WHIRLPOOL 07df33397d2c88011af357269d216948941f1658091d8c277afd528344933a8b5526b229d796bbe56c5f9d4f3d466f0a93450112861cab576a5577054d0d7807
+MISC ChangeLog 2350 SHA256 bf1685d8d3af5e0b2b30471537c3129714ba122bd5573b3ea4044ea7ba96da20 SHA512 59f68bc7c9296803ebf84ca8544362c4a347834575b437112be3d7548766121df86eb1d822ae87cca4dd06f5ef03ec50faf7d5b00204d5570be1e04b79eaacfd WHIRLPOOL 52abfa23dffb5fe4de9d2723994bffcd33a66c22f6454fd722e0d0c631b3cdc78a523a0d4943fe81e9e262f28da1618d54f248a8fe34a6ab854ad8396ae116f6
 MISC metadata.xml 223 SHA256 6d5d8094238401519be30fb6cc94df85aa34d9c2a7477fb899c69025bd550483 SHA512 08b9d44ba58b371f946b53fe52992150b8db47950ce49a79b09dabbb50701d5123b2288adc9f30df65a566e161e609507f190a40209cc44e2806ab699c87a611 WHIRLPOOL c670274d36a1802c41c81bee4c64d1db4c1442cab0ef199218995bcfc056194772401a77d4a12da65aebfb98de9d065d0954e797af9f691a5357c186045e203b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlDN6AYACgkQuQc30/atMkCiXACfS3YSxcqvTT0Np/jh+cNNWd8F
-hdwAn1LEX8lpR243c4K7pCFi8XvTLrIC
-=Kk9t
+iEYEAREIAAYFAlUWJlQACgkQso7CE7gHKw0wQQCgxneHOR6ix6/fOkFX1hAPoVkn
+/jQAmwYQDef+fdMXAqBWUuO8EBzeXL3c
+=LCjv
 -----END PGP SIGNATURE-----
