@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/python-wifi
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/python-wifi/ChangeLog,v 1.14 2012/12/16 15:25:55 armin76 Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/python-wifi/ChangeLog,v 1.15 2015/03/28 03:55:49 idella4 Exp $
+
+*python-wifi-0.5.0-r2 (28 Mar 2015)
+
+  28 Mar 2015; Ian Delaney <idella4@gentoo.org> +python-wifi-0.5.0-r2.ebuild,
+  -python-wifi-0.3.1-r1.ebuild:
+  revbump; conversion -> distutils-r1, rm oldest 'testing' ebuild
 
   16 Dec 2012; Raúl Porcel <armin76@gentoo.org> python-wifi-0.5.0-r1.ebuild:
   alpha/ia64/sparc stable wrt #442038
